force-app/main/default/objects/Lead/fields/Ad_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Ad_Group_ID__c</fullName>
    <description>Unique numeric ID of the ad group</description>
    <inlineHelpText>Unique numeric ID of the ad group</inlineHelpText>
    <label>Ad Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>