force-app/main/default/objects/Lead/fields/Ad_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Ad_Group_Name__c</fullName>
    <description>Name of the ad group within the campaign</description>
    <inlineHelpText>Name of the ad group within the campaign</inlineHelpText>
    <label>Ad Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>