force-app/main/default/objects/Lead/fields/Apollo_List__c.field-meta.xml
<CustomField>
    <fullName>Apollo_List__c</fullName>
    <description>Custom field in Apollo, used to house Lead in a Salesforce Campaign</description>
    <inlineHelpText>Custom field in Apollo, used to house Lead in a Salesforce Campaign</inlineHelpText>
    <label>Apollo List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>