force-app/main/default/objects/Lead/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <description>Unique numeric ID from Google Ads</description>
    <inlineHelpText>Unique numeric ID from Google Ads</inlineHelpText>
    <label>Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>