force-app/main/default/objects/Lead/fields/Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Reason__c</fullName>
    <label>Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Out of Area</fullName>
            </value>
            <value>
                <fullName>Not a Target Industry</fullName>
            </value>
            <value>
                <fullName>Existing Supplier Contract</fullName>
            </value>
            <value>
                <fullName>Requirement Outside Scope</fullName>
            </value>
            <value>
                <fullName>Duplicate Lead</fullName>
            </value>
            <value>
                <fullName>No Response After Multiple Attempts</fullName>
            </value>
            <value>
                <fullName>Not Decision Maker / No Authority</fullName>
            </value>
            <value>
                <fullName>Timescale Too Distant</fullName>
            </value>
            <value>
                <fullName>Poor Lead Quality / Spam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>