force-app/main/default/objects/Lead/fields/Founded_Year__c.field-meta.xml
<CustomField>
    <fullName>Founded_Year__c</fullName>
    <description>Field From Apollo</description>
    <label>Founded Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>