force-app/main/default/objects/Lead/fields/Google_Ads_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_Ads_Campaign_ID__c</fullName>
    <label>Google Ads Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>