force-app/main/default/objects/Lead/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <description>Field From Apollo</description>
    <label>Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>