force-app/main/default/objects/Lead/fields/Latest_Funding_Stage__c.field-meta.xml
<CustomField>
    <fullName>Latest_Funding_Stage__c</fullName>
    <description>Field From Apollo</description>
    <label>Latest Funding Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>