force-app/main/default/objects/Lead/fields/Number_Of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Employees__c</fullName>
    <description>Field From Apollo</description>
    <label>Number Of Employees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>