force-app/main/default/objects/Lead/fields/Primary_Industry__c.field-meta.xml
<CustomField>
    <fullName>Primary_Industry__c</fullName>
    <description>Field From Apollo</description>
    <label>Primary Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>