force-app/main/default/objects/Lead/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Field From Apollo</description>
    <label>Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>