force-app/main/default/objects/Lead/fields/Sample_Job_Posting_Titles__c.field-meta.xml
<CustomField>
    <fullName>Sample_Job_Posting_Titles__c</fullName>
    <description>Field From Apollo</description>
    <label>Sample Job Posting Titles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>