force-app/main/default/objects/Lead/fields/Search_Keyword_Search_Term__c.field-meta.xml
<CustomField>
    <fullName>Search_Keyword_Search_Term__c</fullName>
    <description>Google’s unique click identifier for tracking conversions</description>
    <inlineHelpText>Google’s unique click identifier for tracking conversions</inlineHelpText>
    <label>Search Keyword / Search Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>