force-app/main/default/objects/Lead/fields/Secondary_Industries__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Industries__c</fullName>
    <description>Field From Apollo</description>
    <label>Secondary Industries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>