force-app/main/default/objects/Lead/fields/Technologies__c.field-meta.xml
<CustomField>
    <fullName>Technologies__c</fullName>
    <description>Field From Apollo</description>
    <label>Technologies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>