force-app/main/default/objects/Lead/fields/Total_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding_Amount__c</fullName>
    <description>Field From Apollo</description>
    <label>Total Funding Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>